[package]
name = "alert-manager-api"
version = "0.1.2"
edition = "2021"
description = "Alertmanager API client for pushing alerts"
license = "MIT"
keywords = ["alertmanager", "prometheus", "monitoring", "alerts"]
categories = ["api-bindings", "web-programming"]

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "reqwest-middleware/rustls-tls"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "macros"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "charset", "http2"] }
reqwest-middleware = { version = "0.4", default-features = false, features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL handling
url = { version = "2", features = ["serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Tracing
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"